# ChangeLog for sys-auth/nss_ldap
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/nss_ldap/ChangeLog,v 1.20 2006/05/25 20:12:38 wolf31o2 Exp $

  25 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> nss_ldap-249.ebuild:
  Stable on x86 wrt bug #132550.

  16 May 2006; Michael Hanselmann <hansmi@gentoo.org> nss_ldap-249.ebuild:
  Stable on hppa, mips, sparc. See bug #132550.

  16 May 2006; Markus Rothe <corsair@gentoo.org> nss_ldap-249.ebuild:
  Stable on ppc64; bug #132550

  11 May 2006; Tobias Scherbaum <dertobi123@gentoo.org> nss_ldap-249.ebuild:
  ppc stable, bug #132550

  29 Apr 2006; Michael Hanselmann <hansmi@gentoo.org>
  nss_ldap-239-r1.ebuild:
  Stable on mips.

*nss_ldap-249 (25 Feb 2006)

  25 Feb 2006; Robin H. Johnson <robbat2@gentoo.org>
  +files/nss_ldap-249-sasl-compile.patch, +nss_ldap-249.ebuild:
  Bug #121099, version bump.

  30 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> nss_ldap-239-r1.ebuild:
  Made multilib-aware.

  03 Oct 2005; Michael Hanselmann <hansmi@gentoo.org>
  nss_ldap-239-r1.ebuild:
  Added to ~mips.

  16 Sep 2005; Aron Griffis <agriffis@gentoo.org> nss_ldap-239-r1.ebuild:
  Mark 239-r1 stable on alpha

  08 Sep 2005; Robin H. Johnson <robbat2@gentoo.org> -nss_ldap-233.ebuild:
  Remove broken 233 version.

  13 Jul 2005; Markus Rothe <corsair@gentoo.org> nss_ldap-239-r1.ebuild:
  Stable on ppc64 (bug #96767)

  13 Jul 2005; Rob Holland <tigger@gentoo.org> nss_ldap-239-r1.ebuild:
  stable on x86. fix sec bug #96767

  13 Jul 2005; Michael Hanselmann <hansmi@gentoo.org>
  nss_ldap-239-r1.ebuild:
  Stable on ppc and hppa.

  11 Jul 2005; Simon Stelling <blubb@gentoo.org> nss_ldap-239-r1.ebuild:
  stable on amd64 wrt bug 96767

  09 Jul 2005; Jason Wever <weeve@gentoo.org> nss_ldap-239-r1.ebuild:
  Stable on SPARC wrt security bug #96767.

  07 Jul 2005; Markus Rothe <corsair@gentoo.org> nss_ldap-239-r1.ebuild:
  added ~ppc64

*nss_ldap-239-r1 (06 Jul 2005)